<resources>
    <string name="app_name">Sook-Peech</string>
    <string name="server_client_id">606586417283-4m266cgls2542mopqnoniklt3f71bsqa.apps.googleusercontent.com</string>
    <string name="example_total">(ex)분석 결과, 전반적으로 미흡한 수준입니다. 4개의 항목 중 말하기 속도, 맺음말, —- 항목에서 불안정한 결과를 보이고 있습니다. 반복적으로 연습한 후 실전에 임하시기를 바랍니다.</string>
    <string name="example_gesture">(ex)영상의 총 길이는 3분 10초이며, 김눈송님의 분석 결과입니다.\n3초동안 얼굴 위로 손 감지되었습니다.\n2초동안 팔짱 끼기 감지되었습니다.\n0초동안 허리에 손 감지되었습니다.\n감지된 제스처는 일반적으로 권장하지 않는 제스처이므로 다른 제스처를 추천합니다.</string>
    <string name="example_gaze">(ex)영상의 총 길이는 3분 10초이며, 김눈송님의 분석 결과 15초동안 시선 분산이 감지되었습니다.\n온라인 발표시에는 화면을 응시하는 것이 좋습니다.</string>
    <string name="example_pose">(ex)김눈송님이 선택하신 민감도는 7이며, 총 영상 길이 3분 10초 중 20초동안 자세가 기울어졌습니다. 두 어깨의 수평을 맞추는 자세를 권장합니다.</string>
    <string name="example_speed">(ex)평균적인 말하기 속도는 1분당 96단어 이상 124 단어 미만이며, 현재 김눈송님의 말하기 속도는 1분당 121 단어입니다.\n현재 김눈송님의 말하기 속도는 청중들의 이해도를 높일 수 있는 적정한 말하기 속도 범위에 위치하고 있습니다.</string>
    <string name="example_volume">(ex)평균적인 목소리의 크기 변화는 **0.00%**이며, 현재 김눈송님의 목소리 크기 변화율은 **4.04%**입니다.\n목소리의 크기 변화가 다소 단조로운 것으로 측정되었으며, 단조로운 목소리 크기 변화는 청중들을 쉽게 지루하게 만들 수 있습니다.\n중요한 부분에서 힘 있는 목소리로 연습하시기 바랍니다.</string>
    <string name="example_pitch">(ex)평균적인 목소리의 높낮이 변화율은 **0.00%**이며, 현재 김눈송님의 목소리 높낮이 변화율은 **4.04%**입니다.\n목소리의 높낮이 변화가 다소 단조로운 편으로 측정되었습니다. 목소리 높낮이가 단조로울 경우 좋은 내용이더라도 지루하게 느껴질 수 있습니다.\n내용에 따라 목소리 높낮이를 다양하게 사용하며 내용을 효과적으로 전달하시기 바랍니다.</string>
    <string name="example_conclusion">(ex)전체 78개의 문장 중 **85%**의 문장에서 맺음말이 인식되었습니다. 맺음말이 인식되지 않은 경우, 말 끝을 흐리는 등 발음이 부정확하였거나 문장이 끝난 이후 충분한 공백을 두지 않았을 수 있습니다.\n맺음말이 부정확한 경우 청중들의 이해도과 발표의 전달력을 떨어트릴 수 있으므로, 유의하여 연습하시기 바랍니다.</string>

    <string name="hello">\'숙피치\'를 이용해 당신의 스피치 능력을 향상시켜보세요.\n직접 촬영한 연습을 추가하고 분석 결과를 확인하세요.\n친구와 커뮤니티를 통해 피드백을 받아보세요!</string>

</resources>