<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3e465e">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout_analysis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_rounding_white"
        android:layout_margin="40dp"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="종합 평가"/>

            <RatingBar
                android:id="@+id/ratingbarStyle"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                />

            <TextView
                android:id="@+id/tv_analysis_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_total"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="그래프 보기"
                android:onClick="show_graph"/>

        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="제스처"/>

            <ImageView
                android:id="@+id/good_or_warning_gesture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_warning"/>

            <TextView
                android:id="@+id/tv_analysis_gesture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_gesture"/>

        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="시선 분산"/>

            <ImageView
                android:id="@+id/good_or_warning_gaze"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_good"/>

            <TextView
                android:id="@+id/tv_analysis_gaze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_gaze"/>
        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="전반적인 자세"/>

            <ImageView
                android:id="@+id/good_or_warning_pose"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_warning"/>

            <TextView
                android:id="@+id/tv_analysis_pose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_pose"/>
        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="말하기 속도"/>

            <ImageView
                android:id="@+id/good_or_warning_speed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_good"/>

            <TextView
                android:id="@+id/tv_analysis_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_speed"/>
        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="목소리 크기 변화"/>

            <ImageView
                android:id="@+id/good_or_warning_volume"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_warning"/>

            <TextView
                android:id="@+id/tv_analysis_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_volume"/>
        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="목소리 높낮이"/>

            <ImageView
                android:id="@+id/good_or_warning_pitch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_warning"/>

            <TextView
                android:id="@+id/tv_analysis_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_pitch"/>
        </LinearLayout>

        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="맺음말"/>

            <ImageView
                android:id="@+id/good_or_warning_conclusion"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_warning"/>

            <TextView
                android:id="@+id/tv_analysis_conclusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/example_conclusion"/>
        </LinearLayout>


        <View
            android:background="#9b9ea8"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:paddingBottom="50dp">

            <Button
                android:id="@+id/btn_download_img"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="이미지로 저장하기"
                android:onClick="download_img"/>
        </LinearLayout>


    </LinearLayout>

    </ScrollView>


</RelativeLayout>